--- a/test/testcases/test-repeated-pause.html
+++ b/test/testcases/test-repeated-pause.html
@@ -16,48 +16,23 @@ limitations under the License.
 
 <!DOCTYPE html>
 <style>
-body {
-  background-color: green;
-}
-body div#fail {
-  display: none;
-}
-body.fail {
-  background-color: red;
-}
-body.fail div#pass {
-  display: none;
-}
-body.fail div#fail {
-  display: block;
-}
 div.anim {
   position: relative;
   left: 0px;
 }
 </style>
 
-<div id="pass">PASS</div>
-<div id="fail">FAIL</div>
 <div id="anim" class="anim"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
-
-var fail = function(failureMessage) {
-  var div = document.createElement("div");
-  div.innerText = failureMessage;
-  document.body.appendChild(div);
-  document.body.className = "fail";
+var check = function(actual, expected, description) {
+  console.log('check', actual, expected);
+  test(function() { assert_equals(actual, expected); }, description);
 };
 
-var check = function(actual, expected, failureMessage) {
-  if (actual != expected) {
-    fail(failureMessage + ". Expected '" + expected + "', got '" + actual +
-        "'.");
-  }
-};
+animTestRunner.waitUntilDone();
 
 var player = document.timeline.play(new Animation(
     document.getElementById("anim"), {left: ["100px", "200px"]}, 1.0));
@@ -78,6 +53,8 @@ setTimeout(function() {
     player.paused = false;
     check(player.currentTime, currentTime, "Player.currentTime should be " +
         "unaffected by repeatedly setting Player.paused to false");
+
+    animTestRunner.done();
   }, 100);
 }, 100);
 
