--- a/test/testcases/test-restart.html
+++ b/test/testcases/test-restart.html
@@ -16,29 +16,12 @@ limitations under the License.
 
 <!DOCTYPE html>
 <style>
-body {
-  background-color: green;
-}
-body div#fail {
-  display: none;
-}
-body.fail {
-  background-color: red;
-}
-body.fail div#pass {
-  display: none;
-}
-body.fail div#fail {
-  display: block;
-}
 div.anim {
   position: relative;
   left: 0px;
 }
 </style>
 
-<div id="pass">PASS</div>
-<div id="fail">FAIL</div>
 <div id="anim1" class="anim"></div>
 <div id="anim2" class="anim"></div>
 
@@ -46,19 +29,12 @@ div.anim {
 <script src="../anim-test-pre.js"></script>
 <script>
 
-var fail = function(failureMessage) {
-  var div = document.createElement("div");
-  div.innerText = failureMessage;
-  document.body.appendChild(div);
-  document.body.className = "fail";
+var check = function(actual, expected, description) {
+  console.log('check', actual, expected);
+  test(function() { assert_equals(actual, expected); }, description);
 };
 
-var check = function(actual, expected, failureMessage) {
-  if (actual != expected) {
-    fail(failureMessage + ". Expected '" + expected + "', got '" + actual +
-        "'.");
-  }
-};
+animTestRunner.waitUntilDone();
 
 // Don't use a local named requestAnimationFrame, to avoid potential problems
 // with hoisting.
@@ -97,6 +73,8 @@ raf(function() {
         "Animation 2 should not be in start state");
     check(parseInt(getComputedStyle(anim2.targetElement).left) < 100, true,
         "Animation 2 should not be in end state");
+
+    animTestRunner.done();
   });
 });
 
