renamed getPlayer() to player()

--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -45,17 +45,17 @@ var dt = document.timeline;
 var player1 = dt.play(animation);
 check(player1.timeline, document.timeline, "Player.timeline incorrect");
 
-// Test that TimedItem.getPlayer() and Player.source are consistent.
+// Test that TimedItem.player() and Player.source are consistent.
 checkNotEqual(player1, null, "Player should not be null");
 check(player1.source, animation, "Player.source incorrect");
-check(animation.getPlayer(), player1, "TimedItem.getPlayer() incorrect");
+check(animation.player(), player1, "TimedItem.player() incorrect");
 
 // Test that play() always returns a new Player.
 var player2 = dt.play(animation);
 checkNotEqual(player2, player1,
     "Repeated calls to play() should create a new Player");
-check(animation.getPlayer(), player2,
-    "Repeated play(): TimedItem.getPlayer() incorrect");
+check(animation.player(), player2,
+    "Repeated play(): TimedItem.player() incorrect");
 check(player2.source, animation,
     "Repeated play(): Player.source incorrect");
 check(player2.startTime, player1.startTime,
@@ -67,21 +67,21 @@ check(player2.source, null,
     "Set Player.source: Old Player.source incorrect");
 check(player1.source, animation,
     "Set Player.source: New Player.source incorrect");
-check(animation.getPlayer(), player1,
-    "Set Player.source: TimedItem.getPlayer() incorrect");
+check(animation.player(), player1,
+    "Set Player.source: TimedItem.player() incorrect");
 
-// Test that TimedItem.getPlayer() gives null on a detached tree.
+// Test that TimedItem.player() gives null on a detached tree.
 var animation2 =
     new Animation(document.getElementById("anim"), {left: "100px"});
 var parGroup = new ParGroup([animation2]);
-check(parGroup.getPlayer(), null,
-    "TimedItem.getPlayer() should be null for root");
-check(animation2.getPlayer(), null,
-    "TimedItem.getPlayer() should be null for leaf");
+check(parGroup.player(), null,
+    "TimedItem.player() should be null for root");
+check(animation2.player(), null,
+    "TimedItem.player() should be null for leaf");
 
-// Test that TimedItem.getPlayer() remotes to the root of the tree.
+// Test that TimedItem.player() remotes to the root of the tree.
 var player3 = dt.play(parGroup);
-check(animation2.getPlayer(), player3, "TimedItem.getPlayer() should remote");
+check(animation2.player(), player3, "TimedItem.player() should remote");
 
 // Test that calling play() on a TimedItem with a parent results in
 // reparenting.
@@ -94,10 +94,10 @@ check(player4.source, animation2, "Player should use reparented animation");
 // Test that setting a parent on a TimedItem with a Player causes the player to
 // be disconnected.
 parGroup.add(animation2);
-check(parGroup.getPlayer(), player3,
-    "TimedItem.getPlayer() should be updated for root");
-check(animation2.getPlayer(), player3,
-    "TimedItem.getPlayer() should be updated for leaf");
+check(parGroup.player(), player3,
+    "TimedItem.player() should be updated for root");
+check(animation2.player(), player3,
+    "TimedItem.player() should be updated for leaf");
 check(player4.source, null, "Player.source should be updated");
 check(animation2.parentGroup, parGroup,
     "Animation.parentGroup should be updated");
