Update tests to use iterationDuration in place of duration

--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -50,7 +50,7 @@ test_at(
 // Test that startDelay is applied correctly.
 var elem2 = document.getElementById("anim2");
 var player2 = document.timeline.play(
-    new Animation(elem2, animFunc, {duration: 1.0, startDelay: 1.0}));
+    new Animation(elem2, animFunc, {iterationDuration: 1.0, startDelay: 1.0}));
 
 test_at(
     0,
