--- a/test/testcases/test-compositor.html
+++ b/test/testcases/test-compositor.html
@@ -43,9 +43,9 @@ var dt = document.timeline;
 
 dt.play(new Animation(rect, {x: ["0px", "400px"]}, 3));
 dt.play(new Animation(rect, {x: ["0px", "200px"], operation: 'add'},
-   {startDelay: 1, duration: 4}));
+   {startDelay: 1, iterationDuration: 4}));
 dt.play(new Animation(rect, {x: ["0px", "200px"], operation: 'merge'},
-    {startDelay: 2, duration: 5}));
+    {startDelay: 2, iterationDuration: 5}));
 
 dt.play(new Animation(rect2,
     {"transform": ["translate(0px, 0px)", "translate(200px, 200px)"]},
@@ -55,11 +55,11 @@ dt.play(new Animation(rect2,
       "rotate(0deg) translate(0px, 0px)",
       "rotate(90deg) translate(100px, 0px)"
     ], operation: 'add'},
-    {startDelay: 1, duration: 4}));
+    {startDelay: 1, iterationDuration: 4}));
 dt.play(new Animation(rect2,
     {"transform": [
       "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(1, 1)",
       "translate(0px, 0px) rotate(0deg) translate(0px, 0px) scale(2, 2)"
     ], operation: 'merge'},
-    {startDelay: 2, duration: 5}));
+    {startDelay: 2, iterationDuration: 5}));
 </script>
