--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -131,7 +131,7 @@ for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
   groups.push(new ParGroup([], {
     startDelay: 1,
-    duration: 8,
+    iterationDuration: 8,
     iterationCount: 3,
     playbackRate: 2,
     direction: dir,
@@ -147,14 +147,14 @@ for (var i = 0; i < fillModes.length; i++) {
   for (var j = 0; j < divs.length; j++) {
     groups[j].append(new Animation(divs[j], {left: ["100px", "200px"]}, {
       startDelay: 1,
-      duration: 1,
+      iterationDuration: 1,
       iterationCount: 2,
       fillMode: fillModes[i],
       playbackRate: 0.8
     }));
     groups[j].append(new Animation(divs[j], {sample: sampleFunc}, {
       startDelay: 1,
-      duration: 1,
+      iterationDuration: 1,
       iterationCount: 2,
       fillMode: fillModes[i],
       playbackRate: 0.8
