--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -80,12 +80,12 @@ for (var i = 0; i < directions.length; i++) {
   // Explicit parent duration.
   document.timeline.play(new ParGroup(
       [new Animation(container.getElementsByClassName("a")[0], animation,
-          {duration: 1.0})],
-      {iterationCount: 2.0, direction: directions[i], duration: 1.0}));
+          {iterationDuration: 1.0})],
+      {iterationCount: 2.0, direction: directions[i], iterationDuration: 1.0}));
   // Parent calculates intrinsic duration.
   document.timeline.play(new ParGroup(
       [new Animation(container.getElementsByClassName("b")[0], animation,
-          {duration: 1.0})],
+          {iterationDuration: 1.0})],
       {iterationCount: 2.0, direction: directions[i]}));
 }
 </script>
