--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -72,11 +72,11 @@ var animFunc = new PathAnimationEffect(
 animFunc.rotate = true;
 
 document.timeline.play(new Animation(document.querySelector("#anim1"),
-    animFunc, {duration: 2, iterationCount: 2}));
+    animFunc, {iterationDuration: 2, iterationCount: 2}));
 
 var animFunc2 = new PathAnimationEffect(document.querySelector('#path2'));
 animFunc2.rotate = true;
 
 document.timeline.play(new Animation(document.querySelector("#anim2"),
-    animFunc2, {duration: 2, iterationCount: 2}));
+    animFunc2, {iterationDuration: 2, iterationCount: 2}));
 </script>
