--- a/test/testcases/test-playback-rate.html
+++ b/test/testcases/test-playback-rate.html
@@ -99,28 +99,28 @@ var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
-  groups.push(new ParGroup([], {direction: dir, duration: 3}));
+  groups.push(new ParGroup([], {direction: dir, iterationDuration: 3}));
 }
 
 for (var i = 0; i < containers.length; i++) {
   var container = document.getElementById(containers[i]);
   // Test basic use.
   groups[i].append(new Animation(container.getElementsByClassName("a")[0],
-      {left: ["100px", "300px"]}, {duration: 1.0}, groups[i]));
+      {left: ["100px", "300px"]}, {iterationDuration: 1.0}, groups[i]));
   groups[i].append(new Animation(container.getElementsByClassName("b")[0],
-      {left: ["100px", "300px"]}, {duration: 0.5, playbackRate: 0.5}));
+      {left: ["100px", "300px"]}, {iterationDuration: 0.5, playbackRate: 0.5}));
   groups[i].append(new Animation(container.getElementsByClassName("c")[0],
-      {left: ["100px", "300px"]}, {duration: 2.0, playbackRate: 2.0}));
+      {left: ["100px", "300px"]}, {iterationDuration: 2.0, playbackRate: 2.0}));
    // Test negative values.
   groups[i].append(new Animation(container.getElementsByClassName("d")[0],
-      {left: ["300px", "100px"]}, {duration: 1.0, playbackRate: -1.0}));
+      {left: ["300px", "100px"]}, {iterationDuration: 1.0, playbackRate: -1.0}));
   groups[i].append(new Animation(container.getElementsByClassName("e")[0],
-      {left: ["300px", "100px"]}, {duration: 0.5, playbackRate: -0.5}));
+      {left: ["300px", "100px"]}, {iterationDuration: 0.5, playbackRate: -0.5}));
   groups[i].append(new Animation(container.getElementsByClassName("f")[0],
-      {left: ["300px", "100px"]}, {duration: 2.0, playbackRate: -2.0}));
+      {left: ["300px", "100px"]}, {iterationDuration: 2.0, playbackRate: -2.0}));
    // Test zero.
   groups[i].append(new Animation(container.getElementsByClassName("g")[0],
-      {left: ["300px", "100px"]}, {duration: 1.0, playbackRate: 0.0}));
+      {left: ["300px", "100px"]}, {iterationDuration: 1.0, playbackRate: 0.0}));
   document.timeline.play(groups[i]);
 }
 </script>
