--- a/test/testcases/test-start-time-iterations.html
+++ b/test/testcases/test-start-time-iterations.html
@@ -96,7 +96,7 @@ var group = function(direction) {
 };
 var groupWithFixedDuration = function(direction) {
   return new ParGroup([],
-      {iterationCount: 2.0, direction: direction, duration: 4.0});
+      {iterationCount: 2.0, direction: direction, iterationDuration: 4.0});
 };
 
 for (var i = 0; i < directions.length; i++) {
@@ -115,9 +115,9 @@ for (var i = 0; i < directions.length; i++) {
   test_at(0.75, (function(container, group1, group2) {
     return function() {
       group1.append(new Animation(container.getElementsByClassName("a")[0],
-          animation, {duration: 1.0}));
+          animation, {iterationDuration: 1.0}));
       group2.append(new Animation(container.getElementsByClassName("b")[0],
-          animation, {duration: 1.0}));
+          animation, {iterationDuration: 1.0}));
     };
   }(container, group1, group2)));
 }
